# server

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG_DETAILED.md  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_PLAYERBOT_OPTIMIZATION.md  ChangeLog.txt  Doxyfile.in  EXECUTIVE_SUMMARY.md  PLAYERBOT_OPTIMIZATION_COMPLETE.md  PLAYERBOT_OPTIMIZATION_FINAL_REPORT.md  PLAYERBOT_OPTIMIZATION_INDEX.md  README.md  appveyor.yml
## Temp SQL ##/: Rel21_16_001_Conditions_System_update.sql
.github/workflows/: core_codestyle.yml  core_linux_build.yml  core_windows_build.yml  docker_build.yml
apps/ci/: ci-compiler-update.sh  ci-submodule-update.sh
apps/whitespace_remover/: whitespace_remover.sh
cmake/: GenRevision.cmake  MangosParams.cmake  SetDefinitions.cmake  StatusInfo.cmake
doc/: Authors.md  CMakeLists.txt  ChangeLog.md  EventAI.md  README.md  RequiredPorts.mangosproof  generate_api_docs.md
linux/: getmangos.sh
src/: CMakeLists.txt
src/baker/: CMakeLists.txt  README.md  accelbench.cpp  baker.cpp  bvhdebug.cpp  losbench.cpp  mpq_height_check.cpp  tiletest.cpp
src/baker/nav/: NavMeshBuilder.cpp  NavMeshBuilder.hpp
src/baker/stores/: GameObjectDisplayInfoStore.hpp  LiquidTypeStore.hpp  MapDBCStore.hpp  MpqDbcLoader.hpp
src/baker/terrain/: AdtParser.cpp  AdtParser.hpp  CachedTileSource.cpp  CachedTileSource.hpp  ChunkReaders.hpp  GoModelCache.cpp  GoModelCache.hpp  IMpqArchive.hpp  M2Loader.cpp  M2Loader.hpp  MpqTileSource.cpp  MpqTileSource.hpp  StormLibArchive.cpp  StormLibArchive.hpp  WdtParser.cpp  WdtParser.hpp  WmoLoader.cpp  WmoLoader.hpp
src/framework/GameSystem/: TypeContainer.h
src/framework/Utilities/: UnorderedMapSet.h
src/game/: CMakeLists.txt  pchdef.h
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundMgrUtil.cpp  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundObjects.cpp  BattleGroundQueue.cpp  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundReward.cpp  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt
src/game/ChatCommands/: AccountCommands.cpp  AuctionHouseCommands.cpp  BanAndKickCommands.cpp  CastAndAuraCommands.cpp  CreatureCommands.cpp  (+38 more)
src/mangosd/: AFThread.cpp  CMakeLists.txt  CliRunnable.cpp  Main.cpp  Master.cpp  Master.h  RASession.cpp  RASession.h  Service.h  WorldRunnable.cpp  WorldThread.cpp  mangosd.conf.dist.in  mangosd.cpp
src/modules/: CMakeLists.txt
src/modules/Immersive/: CMakeLists.txt  ImmersiveConfig.cpp  ImmersiveConfig.h  ImmersiveServer.cpp  ImmersiveServer.h  immersive.conf.dist.in  immersive.cpp  immersive.h  immersivepch.cpp  immersivepch.h
src/modules/Immersive/sql/: immersive_characters.sql  immersive_world.sql
src/proto/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  IClientLink.h  IWorldGateway.h  Listener.cpp  Listener.h  Opcodes.h  PacketCodec.cpp  PacketCodec.h
src/realmd/: CMakeLists.txt  Main.cpp  realmd.conf.dist.in
src/realmd/Auth/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h
src/realmd/Patch/: PatchHandler.cpp  PatchHandler.h
src/realmd/Realm/: RealmList.cpp  RealmList.h
src/realmd/SocketBuffer/: BufferedSocket.cpp  BufferedSocket.h
src/realmd/packets/: AuthPackets.h
src/shared/: CMakeLists.txt  SystemConfig.h.in  Timer.h  Util.cpp  Util.h  revision.h  revision_data.h.in
src/shared/Auth/: ARC4.cpp  ARC4.h  AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  HMACSHA1.cpp  HMACSHA1.h  OpenSSLProvider.cpp  OpenSSLProvider.h  Sha1.cpp  Sha1.h  WardenKeyGeneration.h
src/shared/Common/: Common.cpp  Common.h  Locales.h  TimeConstants.h
src/shared/Config/: Config.cpp  Config.h
src/shared/DataStores/: DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h
src/shared/Database/: Database.cpp  Database.h  DatabaseEnv.h  DatabaseMysql.cpp  DatabaseMysql.h  Field.h  QueryResult.h  QueryResultMysql.h  SQLStorage.cpp  SQLStorage.h  SQLStorageImpl.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.cpp  SqlPreparedStatement.h
src/shared/Dynamic/: FactoryHolder.h
src/shared/GameSystem/: NGrid.h  TypeContainer.h  TypeContainerVisitor.h
src/shared/Linux/: PosixDaemon.cpp  PosixDaemon.h
src/shared/LockedQueue/: LockedQueue.h
src/shared/Log/: ConsoleLogWriter.cpp  ConsoleLogWriter.h  Log.cpp  Log.h
src/shared/Platform/: CompilerDefs.h  Define.h
src/shared/Policies/: Singleton.h
src/shared/Threading/: DelayExecutor.cpp  DelayExecutor.h  LeasedPtr.h  ThreadLocalStore.h  Threading.cpp  Threading.h
src/shared/Utilities/: ByteBuffer.cpp  ByteBuffer.h  ByteConverter.h  Callback.h  ConsoleStyle.cpp  ConsoleStyle.h  Errors.h  EventProcessor.cpp  ProgressBar.cpp  ProgressBar.h  RNGen.h  ScheduledExit.cpp  ScheduledExit.h  StartupUI.cpp  StartupUI.h  StartupUIDemo.cpp  Timer.h  Util.cpp  Util.h  WorldPacket.h
src/shared/Utilities/LinkedReference/: Reference.h
src/shared/Win/: WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/shared/net/: BindAddress.cpp  FlowControl.hpp  ISession.hpp  SendQueue.hpp  Server.hpp
src/shared/net/iocp/: IocpServer.cpp  IocpServer.hpp
src/shared/net/reactor/: Connection.hpp  EpollPoller.cpp  EpollPoller.hpp  KqueuePoller.cpp  KqueuePoller.hpp  ReactorServer.cpp  ReactorServer.hpp
src/shared/net/uring/: UringServer.cpp  UringServer.hpp
src/tools/: .gitignore
tests/: AuthCryptoTests.cpp  CMakeLists.txt  CheckProtoBoundary.cmake  CheckWorldNetworkBoundary.cmake  DatabaseConcurrencyTests.cpp  LeaseTests.cpp  NavMeshBuilderTests.cpp  NetworkRegressionTests.cpp  ProtocolTests.cpp  SessionMailboxTests.cpp  TestSupport.hpp
win/VC100/: CopytoOutput.vcxproj  game.vcxproj  mangosscript.vcxproj  shared.vcxproj
win/VC110/: LuaEngine.vcxproj  ace.vcxproj  config.h  game.vcxproj  mangosd.vcxproj  mangosscript.vcxproj  shared.vcxproj
win/VC120/: game.vcxproj  mangosscript.vcxproj  shared.vcxproj
(+759 files in other folders)
